--- a/src/components/Admin/Movie.css
+++ b/src/components/Admin/Movie.css
@@ -13,8 +13,10 @@
 .list .button{
     background-color: plum;
     width: 100%;
-    height: fit-content;
+    height: 35px;
     border-radius: 4px;
+    font-size: large;
+    font-weight: bold;
 }
 textarea{
     width: 100%;
